<resources>
    <string name="app_name">智饮水</string>
    <string name="err_reason_title">故障原因：</string>
    <string name="contract_title">，请联系</string>
    <string name="hot_water">热水</string>
    <string name="warm_water">温水</string>
    <string name="cool_water">冷水</string>
    <string name="exit">退出(20s)</string>
    <string name="out_tds">出水TDS</string>
    <string name="raw_tds">原水TDS</string>
    <string name="out_tds_rate">去除率</string>
    <string name="ppm_rate_value">%1$d\%</string>
    <string name="ppm">PPM</string>
    <string name="ppm_value">%1$sPPM</string>
    <string name="jiare">加热</string>
    <string name="zhileng">制冷</string>
    <string name="produce">制水</string>
    <string name="chongxi">冲洗</string>
    <string name="quit">退出</string>
    <string name="freedrink">免费饮水</string>
    <string name="paydrink">支付饮水</string>
    <string name="seeadtodrink">(需观看广告后才可取水)</string>
    <string name="scan">扫描二维码</string>
    <string name="getwater">方可取水</string>
    <string name="get_water_bind">方可取水</string>
    <string name="pop_warning_title">温馨提示</string>
    <string name="pop_warning_msg">请放置好杯子，小心烫伤！请按确认！</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="accoutnomoney">账户余额不足</string>
    <string name="tobuy">请到微信公众号充值</string>
    <string name="stop_get_water">停止取水</string>
    <string name="get_cup">取纸杯</string>
    <string name="get_watering">正在出水</string>
    <string name="getcuping">正在出杯</string>
    <string name="free_ad_wait">请等待%1$d秒</string>
    <string name="device_number">设备编号：%1$s</string>
    <string name="operate_quit_time">退 出\n(%1$dS)</string>
    <string name="init_no_network">网络异常，请先检查网络环境，再做操作。</string>

    <!--Toast-->
    <string name="xg_push_id_timeout_toast">获取激活码超时，APP即将重新初始化</string>
    <string name="xg_push_id_fail_toast">获取激活码失败，APP即将重新初始化</string>
    <string name="xg_push_id_device_id_sync_fail_toast">同步设备到服务器失败</string>
    <string name="get_device_config_no_id_toast1">获取DeviceId/token失败，请重试</string>
    <string name="get_device_config_no_id_toast2">多次获取DeviceId/token失败，请联系平台运维人员</string>

    <!--dialog-->
    <string name="dialog_btn_ok">好的</string>
    <string name="dialog_msg_no_device_config_for_server">
        连接服务器超时，请稍等片刻再重新激活设备。
        \n如果当前网络正常，请告知平台运维人员。
    </string>
    <string name="dialog_msg_no_device_config_for_data">
        设备信息数据异常，
        \n请告知平台运维人员后，
        \n再重新激活设备
    </string>
    <string name="dialog_msg_no_video_config_for_data">
        广告数据异常，
        \n请告知平台运维人员后，
        \n再重新激活设备
    </string>

    <!--售水模式-->
    <string name="drink_mode_rent">租赁模式</string>
    <string name="drink_mode_machine_sale">零售模式</string>
    <string name="drink_mode_water_sale">售水模式</string>

    <!--滤芯种类-->
    <string name="filter_type_default">滤芯</string>
    <string name="filter_type_pp">PP棉</string>
    <string name="filter_type_grain">颗粒活性炭</string>
    <string name="filter_type_press">压缩活性炭</string>
    <string name="filter_type_pose">后置活性炭</string>
    <string name="filter_type_ro">ro反渗透活性炭</string>

    <!--预警标题-->
    <string name="notice_subject_field_service">现场维护</string>
    <string name="notice_subject_device_service">设备维护</string>

    <!--预警内容-->
    <string name="notice_content_no_cup">纸杯不足</string>
    <string name="notice_content_no_com_network">串口通讯异常</string>
    <string name="notice_content_water_quality_unusual">水质异常</string>
    <string name="notice_content_water_leak">漏水</string>
    <string name="notice_content_raw_water_lack">原水缺水</string>
    <string name="notice_content_incorrect_url">视频url错误</string>
    <string name="notice_content_rent_expired">租期到期</string>
    <string name="notice_content_tds_abnormal">去除率小于80%，大于0</string>

    <!-- 设备故障原因 start -->
    <string name="break_down_reason_default">设备已坏（错误码：10000）</string>
    <string name="break_down_reason_no_device_id">设备已坏（错误码：10001）</string>
    <string name="break_down_reason_no_device_config">设备已坏（错误码：10002）</string>
    <string name="break_down_reason_no_drink_mode">设备已坏（错误码：10003）</string>
    <string name="break_down_reason_no_contract_info">设备已坏（错误码：10004）</string>
    <string name="break_down_reason_no_rent_deadline">设备已坏（错误码：10005）</string>
    <string name="break_down_reason_no_init_video">设备已坏（错误码：10006）</string>
    <string name="break_down_reason_no_com_network">串口通讯异常</string>
    <string name="break_down_reason_no_network">网络异常</string>
    <string name="break_down_reason_expired">设备已到期</string>
    <string name="break_down_reason_filter_over">已耗尽</string>
    <string name="break_down_reason_tds_abnormal">滤芯失效</string>
    <string name="pleasepaytogetwater">付费饮水故障，请免费喝水</string>
    <!-- 设备故障原因 end -->

    <!-- IjkPlayer Start -->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <string name="pref_key_enable_background_play">pref_key_enable_background_play</string>
    <string name="pref_key_player">pref_key_player</string>
    <string name="pref_key_using_media_codec">pref_key_using_media_codec</string>
    <string name="pref_key_using_media_codec_auto_rotate">pref_key_using_media_codec_auto_rotate</string>
    <string name="pref_key_media_codec_handle_resolution_change">pref_key_media_codec_handle_resolution_change</string>
    <string name="pref_key_using_opensl_es">pref_key_using_opensl_es</string>
    <string name="pref_key_pixel_format">pref_key_pixel_format</string>
    <string name="pref_key_enable_no_view">pref_key_enable_no_view</string>
    <string name="pref_key_enable_surface_view">pref_key_enable_surface_view</string>
    <string name="pref_key_enable_texture_view">pref_key_enable_texture_view</string>
    <string name="pref_key_enable_detached_surface_texture">pref_key_enable_detached_surface_texture</string>
    <string name="pref_key_using_mediadatasource">pref_key_using_mediadatasource</string>
    <string name="pref_key_last_directory">pref_key_last_directory</string>

    <!-- IjkPlayer End -->

    <string name="init_device_info_loading">正在初始化设备信息..</string>
    <string name="scan_qcode">打开手机微信，扫描屏幕上方二维码激活系统</string>
    <string name="init_activate_success_welcome">欢迎使用新鸿海新鲜水!</string>
    <string name="operate_too_fast">操作过快，请稍后操作</string>
</resources>
