<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_top"
    android:layout_gravity="center"
    android:background="@drawable/pop_warning_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pop_warning_title"
        android:textStyle="italic"
        android:textSize="@dimen/pop_warning_title_text_size"
        android:textColor="@color/darkolivegreen"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/waring_ico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/pop_warning_msg_margin_top"
            android:paddingBottom="@dimen/pop_warning_msg_margin_bottom"
            android:gravity="center"
            android:src="@drawable/pop_warning_icon"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/right_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/waring_ico"
            android:gravity="center"
            android:paddingTop="@dimen/pop_warning_msg_margin_top"
            android:paddingBottom="@dimen/pop_warning_msg_margin_bottom"
            android:paddingStart="@dimen/margin_top"
            android:text="@string/pop_warning_msg"
            android:textColor="@color/pop_warning_msg_text_color"
            android:textStyle="bold"
            android:textSize="@dimen/pop_warning_msg_text_size"/>
        <!--操作按钮-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/pop_warning_confirm_rl"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/background_red"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/top_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="√"
                android:textColor="@color/white"
                android:textSize="@dimen/pop_warning_button_text_size"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/bottom_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="@dimen/pop_warning_button_text_size"
                android:textStyle="bold"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/pop_warning_cancel_rl"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/pop_warning_button_margin"
            android:background="@drawable/background_blue"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/top_cancel_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="X"
                android:textColor="@color/white"
                android:textSize="@dimen/pop_warning_button_text_size"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/bottom_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/pop_warning_button_text_size"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>